crates/cli/src/commands/watch/snapshots/mcpgw__commands__watch__tui__tests__the_help_overlay_covers_the_panes.snap
---
source: crates/cli/src/commands/watch/tui.rs
expression: frame(&state)
---
"mcpgw watch  /traffic  3/3 records                                                                  "
"┌ servers · sorted by calls ───────────────────────────────────────────────────────────────────────┐"
"│server                       target                         calls  errors      p50      p95   last│"
"│github                       create_issue                       1       0     87ms     87ms    12s│"
"│github                       search_code                        1       1    210ms    210ms     5s│"
"│linear                       tools/list                         1       0      4ms      4ms    now│"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└─────────────────────┌ keys · any key closes ───────────────────────────────┐─────────────────────┘"
"┌ calls · following ──│  q         quit                                      │─────────────────────┐"
"│  age   server       │  ↑/↓ j/k   select a call                             │           took      │"
"│  12s ✓ github       │  Enter     toggle the detail pane                    │ode        87ms      │"
"│   5s ✗ github       │  f         filter by server → tool → status → client │          210ms      │"
"│  now ✓ linear       │  /         free text filter                          │            4ms      │"
"│                     │  p         pause / resume                            │                     │"
"└─────────────────────│  c         clear                                     │─────────────────────┘"
"┌ call ───────────────│  s         sort by calls / errors / p95              │─────────────────────┐"
"│      age  now       │  ?         this help                                 │                     │"
"│   server  linear    └──────────────────────────────────────────────────────┘                     │"
"│   target  tools/list                                                                             │"
"│   method  tools/list                                                                             │"
"│   client  —                                                                                      │"
"│  session  s3ss                                                                                   │"
"│ endpoint  s/linear                                                                               │"
"│  outcome  ok · 4ms · captured full                                                               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"q quit  f filter  / search  p pause  c clear  s sort  ? help  no filter                             "
