crates/cli/src/commands/watch/snapshots/mcpgw__commands__watch__tui__tests__the_three_panes_render.snap
---
source: crates/cli/src/commands/watch/tui.rs
expression: frame(&populated())
---
"mcpgw watch  /traffic  3/3 records                                                                  "
"┌ servers · sorted by calls ───────────────────────────────────────────────────────────────────────┐"
"│server                       target                         calls  errors      p50      p95   last│"
"│github                       create_issue                       1       0     87ms     87ms    12s│"
"│github                       search_code                        1       1    210ms    210ms     5s│"
"│linear                       tools/list                         1       0      4ms      4ms    now│"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ calls · following ───────────────────────────────────────────────────────────────────────────────┐"
"│  age   server           target                 method               client             took      │"
"│  12s ✓ github           create_issue           tools/call           claude-code        87ms      │"
"│   5s ✗ github           search_code            tools/call           cursor            210ms      │"
"│  now ✓ linear           tools/list             tools/list           —                   4ms      │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ call ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│      age  now                                                                                    │"
"│   server  linear                                                                                 │"
"│   target  tools/list                                                                             │"
"│   method  tools/list                                                                             │"
"│   client  —                                                                                      │"
"│  session  s3ss                                                                                   │"
"│ endpoint  s/linear                                                                               │"
"│  outcome  ok · 4ms · captured full                                                               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"q quit  f filter  / search  p pause  c clear  s sort  ? help  no filter                             "
